--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body class="w-full h-screen bg-gray-950 flex xl:items-center justify-center">
     
-    <button id="next" class="top-5 left-10 absolute text-7xl text-blue-800 mr-4">
+    <button id="next" class="top-5 left-5 absolute text-4xl text-blue-800 mr-4">
         <i class="fa-solid fa-forward"></i>
     </button>
 
     <div class="container w-full mt-24 md:mt-0 xl:w-2/6 h-4/6 xl:h-5/6 bg-gray-100 rounded-xl flex items-start justify-between p-4 flex-col">
         <header class="w-full h-1/12 flex items-center justify-between mb-4">
-            <div class="left text-5xl text-green-700">
-                <i class="fa-solid fa-circle-left"></i>
+            <div class="right w-16 text-orange-700">
+                <img src="assets/media/portadas/kinko.png" alt="">
             </div>
             <div class="kinkoRadio text-red-700 font-inter text-xl font-black">
                 <p>REPRODUCIENDO:</p>
