--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="right w-16 text-orange-700">
                 <img src="assets/media/portadas/kinko.png" alt="">
             </div>
-            <div class="kinkoRadio text-green-600 font-inter text-xl font-black">
-                <p>REPR<span class="text-red-600">ODUCI</span><span class="text-orange-600">ENDO</span></p>
+            <div class="kinkoRadio font-inter text-xl font-black">
+                <p><span class="text-green-600">REPR</span><span class="text-red-600">ODUCI</span><span class="text-orange-600">ENDO</span></p>
             </div>
             <div class="right text-5xl text-orange-700">
                 <i class="fa-solid fa-circle-plus"></i>
