--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src='https://cdn.tailwindcss.com'></script>
     <script src='https://kit.fontawesome.com/cea33d77ef.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" href="assets/media/portadas/kinko.png">
 </head>
 
 <body class="w-full h-screen bg-gray-950 flex xl:items-center justify-center">
