--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src='https://cdn.tailwindcss.com'></script>
     <script src='https://kit.fontawesome.com/cea33d77ef.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="icon" href="assets/media/portadas/kinko.png">
+    <link rel="shortcut icon" href="assets/media/portadas/kinko.png" type="image/x-icon">
 </head>
 
 <body class="w-full h-screen bg-gray-950 flex xl:items-center justify-center">
@@ -30,8 +30,8 @@
         </header>
         
         <div class="w-full h-5/6 flex items-center justify-start flex-col">
-            <picture class="song-image w-64 h-64 rounded-full bg-red-300 mb-4 overflow-hidden">
-                <img id="album-art" src="assets/media/somosElShow.jpg" alt="Ep">
+            <picture class="song-image w-64 h-64 2xl:h-5/6 2xl:w-9/12 rounded-full bg-red-300 mb-4 overflow-hidden">
+                <img id="album-art" src="assets/media/somosElShow.jpg" alt="Ep" class="object-cover w-full h-full">
             </picture>
             <div class="w-full flex items-center justify-start flex-col">
                 <h2 id="song-title" class="text-3xl font-poppins font-bold text-gray-950">Somos El Show</h2>
