--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         
         <div class="w-full h-5/6 flex items-center justify-start flex-col">
-            <picture class="song-image w-64 h-64 2xl:h-5/6 2xl:w-9/12 rounded-full bg-red-300 mb-4 overflow-hidden">
+            <picture class="song-image w-64 h-64 2xl:96 2xl:96 rounded-full bg-red-300 mb-4 overflow-hidden">
                 <img id="album-art" src="assets/media/somosElShow.jpg" alt="Ep" class="object-cover w-full h-full">
             </picture>
             <div class="w-full flex items-center justify-start flex-col">
