--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
         </header>
         
-        <div class="w-full h-5/6 flex items-center justify-start flex-col">
-            <picture class="song-image w-64 h-64 2xl:96 2xl:96 rounded-full bg-red-300 mb-4 overflow-hidden">
+        <div class="w-full h-4/6 flex items-center justify-start flex-col">
+            <picture class="song-image h-full rounded-full bg-red-300 mb-4 overflow-hidden">
                 <img id="album-art" src="assets/media/somosElShow.jpg" alt="Ep" class="object-cover w-full h-full">
             </picture>
             <div class="w-full flex items-center justify-start flex-col">
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="h-1/6 w-full flex items-center justify-center pb-2">
+        <div class="h-1/6 w-full flex items-center justify-center ">
             
             <button id="play" class="text-7xl text-red-800">
                 <i class="fa-solid fa-circle-play"></i>
