--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="h-1/6 w-full flex items-center justify-center ">
             
-            <button id="play" class="text-7xl text-red-800">
+            <button id="play" class="text-7xl 2xl:text-9xl text-red-800">
                 <i class="fa-solid fa-circle-play"></i>
             </button>
         </div>
