--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </a>
         </header>
         
-        <div class="w-full h-4/6 flex items-center justify-start flex-col">
+        <div class="w-full h-3/6 md:h-4/6 flex items-center justify-start flex-col">
             <picture class="song-image h-full rounded-full bg-red-300 mb-4 overflow-hidden">
                 <img id="album-art" src="assets/media/somosElShow.jpg" alt="Ep" class="object-cover w-full h-full">
             </picture>
