--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </a>
         </header>
         
+    <audio id="audio" controls></audio>
         <div class="w-full h-3/6 md:h-4/6 flex items-center justify-start flex-col">
             <picture class="song-image h-full rounded-full bg-red-300 mb-4 overflow-hidden">
                 <img id="album-art" src="assets/media/somosElShow.jpg" alt="Ep" class="object-cover w-full h-full">
@@ -47,7 +48,6 @@
         </div>
     </div>
 
-    <audio id="audio"></audio>
 
     <script src="assets/js/main.js"></script>
 </body>
