--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body class="w-full h-screen bg-gray-950 flex items-center justify-center">
     
-    <button id="next" class="bottom-5 left-5 fixed text-4xl text-blue-800 mr-4">
+    <button id="next" class="hidden bottom-5 left-5 fixed text-4xl text-blue-800 mr-4">
         <i class="fa-solid fa-forward"></i>
     </button>
 
-    <div class="w-full md:max-w-xl md:mt-24 md:mt-0 xl:w-2/6 h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-2    00 md:rounded-xl flex items-start justify-between p-4 flex-col">
+    <div class="w-full md:max-w-xl md:mt-24 md:mt-0 xl:w-2/6 h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
         <header class="w-full h-1/12 flex flex-wrap items-center justify-between mb-4">
             <div class="right w-16 text-orange-700">
                 <img src="assets/media/portadas/kinko.png" alt="">
@@ -45,7 +45,7 @@
                 <i class="fa-solid fa-circle-play"></i>
             </button>
             
-            <label class="slider mx-4">
+            <label class="hidden slider mx-4">
                   <input class="level" type="range" name="volumen" id="volumen" min="0" max="1" value="0.5" step="0.1">
                   <svg class="volume" id="silence" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
