--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <i class="fa-solid fa-forward"></i>
     </button>
 
-    <div class="w-full md:max-w-xl md:mt-24 md:mt-0 xl:w-2/6 h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
+    <div class="w-full md:max-w-xl mt-24 md:mt-0 xl:w-2/6 h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
         <header class="w-full h-1/12 flex flex-wrap items-center justify-between mb-4">
             <div class="right w-16 text-orange-700">
                 <img src="assets/media/portadas/kinko.png" alt="">
@@ -24,7 +24,7 @@
             <div class="kinkoRadio font-inter text-xl font-black">
                 <p><span class="text-green-600">REPR</span><span class="text-red-600">ODUCI</span><span class="text-orange-600">ENDO</span></p>
             </div>
-            <a class="right text-5xl text-orange-700" href="#">
+            <a class="right text-5xl text-orange-700" target="_blank" href="https://forms.gle/W38DxY7nuDn5FZMx6">
                 <i class="fa-solid fa-circle-plus"></i>
             </a>
         </header>
