--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="assets/media/portadas/kinko.png" type="image/x-icon">
 </head>
 
-<body class="w-full h-screen bg-gray-950 flex items-center justify-center">
+<body class="w-full md:h-screen bg-gray-950 flex items-center justify-center">
     
     <button id="next" class="hidden bottom-5 left-5 fixed text-4xl text-blue-800 mr-4">
         <i class="fa-solid fa-forward"></i>
