--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <i class="fa-solid fa-forward"></i>
     </button>
 
-    <div class="w-full md:max-w-xl xl:w-2/6 h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
+    <div class="containerr w-full md:max-w-xl xl:w-2/6 md:h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
         <header class="w-full h-1/12 flex flex-wrap items-center justify-between mb-4">
             <div class="right w-16 text-orange-700">
                 <img src="assets/media/portadas/kinko.png" alt="">
