--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="shortcut icon" href="assets/media/portadas/kinko.png" type="image/x-icon">
 </head>
 
-<body class="w-full md:h-screen bg-gray-950 flex md:items-center items-start justify-center">
+<body class="w-full md:h-screen bg-gray-200 md:bg-gray-950 flex md:items-center items-start justify-center">
     
     <button id="next" class="hidden bottom-5 left-5 fixed text-4xl text-blue-800 mr-4">
         <i class="fa-solid fa-forward"></i>
     </button>
 
-    <div class="containerr w-full md:max-w-xl xl:w-2/6 md:h-screen xl:h-4/6 xl:h-5/6 bg-gray-300 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
+    <div class="containerr w-full md:max-w-xl xl:w-2/6 md:h-screen xl:h-4/6 xl:h-5/6 bg-gray-200 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
         <header class="w-full h-1/12 flex flex-wrap items-center justify-between mb-4">
             <div class="right w-16 text-orange-700">
                 <img src="assets/media/portadas/kinko.png" alt="">
