--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </a>
         </header>
         
-        <div class="w-full h-3/6 md:h-4/6 flex items-center justify-start flex-col">
+        <div class="w-full h-4/6 md:h-4/6 flex items-center justify-start flex-col">
             <picture class="song-image h-full rounded-full bg-red-300 mb-4 overflow-hidden">
                 <img id="album-art" src="assets/media/portadas/somosElShow.jpg" alt="Ep" class="object-cover w-full h-full">
             </picture>
             <div class="w-full flex items-center justify-start flex-col text-center">
-                <h2 id="song-title" class="text-3xl xl:text-4xl 2xl:text-5xl font-poppins font-bold text-gray-950">Somos El Show</h2>
+                <h2 id="song-title" class="text5xl md:text-3xl xl:text-4xl 2xl:text-5xl font-poppins font-bold text-gray-950">Somos El Show</h2>
                 <p id="song-artist" class="text-xl font-normal font-poppins text-gray-600">Ramma, Ara</p>
             </div>
         </div>
