--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 
     <audio id="audio"></audio>
-    <script src="assets/js/main.js"></script>
+
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
