--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
 
     <audio id="audio"></audio>
 
-    <script type="module" src="assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
