Nuevas Canciones y cambios visuales

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 </head>
 
 <body class="w-full md:h-screen bg-gray-200 md:bg-gray-950 flex md:items-center items-start justify-center">
-    
     <button id="next" class="hidden bottom-5 left-5 fixed text-4xl text-blue-800 mr-4">
         <i class="fa-solid fa-forward"></i>
     </button>
+
+        <nav class="right-5 flex fixed items-center justify-center flex-col gap-16 text-3xl">
+            <a href="https://www.instagram.com/kinkouruguay/" class="hover:opacity-60 opacity-80 text-green-400"><i class="fa-brands fa-instagram" title="Instagram"></i></a>
+            <a href="https://kinko.com.uy/site/index" class="hover:opacity-60 opacity-80 text-red-400"><i class="fa-solid fa-globe" title="Sitio Web"></i></a>
+            <a href="https://open.spotify.com/playlist/5wZkRaZLxD7Xdznlpllm5N?si=0uENaspkSLO9MXB4yp68cw" class="hover:opacity-60 opacity-80 text-orange-400" title="Playlist Kinko"><i class="fa-brands fa-spotify"></i></a>
+            <!-- <a href="#" class="hover:opacity-60 opacity-80 invert"><img src="assets/img/icons/gmail.png" class="size-7" alt=""></a> -->
+        </nav>
+
 
     <div class="containerr w-full md:max-w-xl xl:w-2/6 md:h-screen xl:h-4/6 xl:h-5/6 bg-gray-200 md:bg-gray-100 md:rounded-xl flex items-start justify-between p-4 flex-col">
         <header class="w-full h-1/12 flex flex-wrap items-center justify-between mb-4">
@@ -30,12 +37,12 @@
         </header>
         
         <div class="w-full h-4/6 md:h-4/6 flex items-center justify-start flex-col">
-            <picture class="song-image h-full rounded-full bg-red-300 mb-4 overflow-hidden">
-                <img id="album-art" src="assets/media/portadas/somosElSho.jpg" alt="Ep" class="object-cover w-full h-full">
+            <picture class="song-image h-full rounded-full bg-green-300 mb-4 overflow-hidden">
+                <img id="album-art" src="assets/media/portadas/error.jpg" alt="Ep" class="object-cover w-full h-full">
             </picture>
             <div class="w-full flex items-center justify-start flex-col text-center">
-                <h2 id="song-title" class="text-5xl md:text-3xl xl:text-4xl 2xl:text-5xl font-poppins font-bold text-gray-950">Somos El Show</h2>
-                <p id="song-artist" class="text-xl font-normal font-poppins text-gray-600">Ramma, Ara</p>
+                <h2 id="song-title" class="text-5xl md:text-3xl xl:text-4xl 2xl:text-5xl font-poppins font-bold text-gray-950">Cancion No Encontrada</h2>
+                <p id="song-artist" class="text-xl font-normal font-poppins text-gray-600">Reinicie la Web</p>
             </div>
         </div>
 
