--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </button>
 
         <nav class="navWebs md:right-5 flex fixed items-center justify-center flex-raw md:flex-col gap-16 text-3xl">
-            <a href="https://www.instagram.com/kinkouruguay/" class="hover:opacity-60 opacity-80 text-green-400"><i class="fa-brands fa-instagram" title="Instagram"></i></a>
-            <a href="https://kinko.com.uy/site/index" class="hover:opacity-60 opacity-80 text-red-400"><i class="fa-solid fa-globe" title="Sitio Web"></i></a>
-            <a href="https://open.spotify.com/playlist/5wZkRaZLxD7Xdznlpllm5N?si=0uENaspkSLO9MXB4yp68cw" class="hover:opacity-60 opacity-80 text-orange-400" title="Playlist Kinko"><i class="fa-brands fa-spotify"></i></a>
+            <a target="_blank" href="https://www.instagram.com/kinkouruguay/" class="hover:opacity-60 opacity-80 text-green-400"><i class="fa-brands fa-instagram" title="Instagram"></i></a>
+            <a target="_blank" href="https://kinko.com.uy/site/index" class="hover:opacity-60 opacity-80 text-red-400"><i class="fa-solid fa-globe" title="Sitio Web"></i></a>
+            <a target="_blank" href="https://open.spotify.com/playlist/5wZkRaZLxD7Xdznlpllm5N?si=0uENaspkSLO9MXB4yp68cw" class="hover:opacity-60 opacity-80 text-orange-400" title="Playlist Kinko"><i class="fa-brands fa-spotify"></i></a>
             <!-- <a href="#" class="hover:opacity-60 opacity-80 invert"><img src="assets/img/icons/gmail.png" class="size-7" alt=""></a> -->
         </nav>
 
