--- a/index.html
+++ b/index.html
@@ -11,6 +11,42 @@
 </head>
 
 <body class="w-full md:h-screen bg-gray-200 md:bg-gray-950 flex md:items-center items-start justify-center">
+    <aside id="popup" class="fixed w-2/6 h-5/6 bg-gray-50 p-5 flex flex-col rounded-md justify-between">
+        <div class="w-full h-5/6">
+            <div class="w-full h-2/6 bg-red-600 rounded-md mb-4 overflox-hidden flex items-center justify-center">
+                <img src="assets/media/martillo.webp" alt="Martillo" class="h-5/6 rotate-45 filter brightness-0 invert">
+            </div>
+
+
+            <div class="font-poppins text-4xl font-black">
+                <h2 class="text-4xl font-bold text-red-600 mb-2">Aviso Importante</h2>
+            </div>
+
+            <div class="font-poppins text-xl font-medium">
+                <!-- <p>Se recuerda que el uso de esta radio no esta autorizada por Kinko, se recomienda el uso de la radio original hecha por el proveedor </p> -->
+                <p>
+                    El uso de esta radio no está autorizado por Kinko. Se debe utilizar exclusivamente la radio del proveedor <b>Millsonic</b>. 
+            El uso de esta radio puede ser <b>sancionable</b>.  
+            <br><br>
+            Esta radio ha sido creada con el único fin de que Kinko la evalúe y la apruebe, y no está destinada para el uso de los funcionarios.
+                </p>
+            </div>
+        </div>
+        <div class="flex justify-between gap-4 text-xl font-poppins">
+            <!-- Botón para ir a Google -->
+            <a href="https://www.google.com"
+                class="flex-1 bg-red-600 text-white py-2 rounded-lg text-center hover:bg-red-700 transition">
+                Ir a Radio Oficial
+            </a>
+
+            <!-- Botón para cerrar el popup -->
+            <button id="closePopup" class="flex-1 text-gray-950 py-2 rounded-lg hover:bg-gray-200 transition">
+                Cerrar
+            </button>
+        </div>
+    </aside>
+    
+    
     <button id="next" class="hidden bottom-5 left-5 fixed text-4xl text-blue-800 mr-4">
         <i class="fa-solid fa-forward"></i>
     </button>
