--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="w-full md:h-screen bg-gray-200 md:bg-gray-950 flex md:items-center items-start justify-center">
     <aside id="popup" class="fixed w-2/6 h-5/6 bg-gray-50 p-5 flex flex-col rounded-md justify-between">
         <div class="w-full h-5/6">
-            <div class="w-full h-2/6 bg-red-600 rounded-md mb-4 overflox-hidden flex items-center justify-center">
+            <div class="w-full h-2/6 xl:h-3/6 bg-red-600 rounded-md mb-4 overflox-hidden flex items-center justify-center">
                 <img src="assets/media/martillo.webp" alt="Martillo" class="h-5/6 rotate-45 filter brightness-0 invert">
             </div>
 
