--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2 class="text-4xl font-bold text-red-600 mb-2">Aviso Importante</h2>
                 </div>
 
-                <div class="font-poppins text-xl xl:text-md font-medium">
+                <div class="font-poppins text-xl xl:text-base font-medium">
                     <!-- <p>Se recuerda que el uso de esta radio no esta autorizada por Kinko, se recomienda el uso de la radio original hecha por el proveedor </p> -->
                     <p>
                         El uso de esta radio no está autorizado por Kinko. Se debe utilizar exclusivamente la radio del
