--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Botón para ir a Google -->
                 <a href="http://mick.millsonic.com/player/kinko-radio"
                     class="flex-1 bg-red-600 text-white py-2 rounded-lg text-center hover:bg-red-700 transition">
-                    Ir a Radio Oficial
+                    Radio Millsonic
                 </a>
 
                 <!-- Botón para cerrar el popup -->
