--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p>
                         El uso de esta radio no está autorizado por Kinko. Se debe utilizar exclusivamente la radio del
                         proveedor <b>Millsonic</b>.
-                        El uso de esta radio puede ser <b>sancionable</b>.
+                        El uso de esta radio es totalmente <b>sancionable</b>.
                         <br><br>
                         Esta radio ha sido creada con el único fin de que Kinko la evalúe y la apruebe, y no está
                         destinada para el uso de los funcionarios.
